# ChangeLog for sci-mathematics/sage
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  using glpk build without gmp will lead to (minor) doctest failures

  22 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Bump dependency on elliptic curves ebuild

  20 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-6.6.ebuild, sage-6.7-r1.ebuild, sage-9999.ebuild:
  Move to newer pexpect. Pin notebook version depending on pexpect used.

  16 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Another try at fixing what is now issue #361

  16 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/ntl-9.3.0.patch, files/sage-6.8-exec.patch, sage-9999.ebuild:
  patch rebasing, bumping and expanding for 6.8.rc0 - also remove ntl-9.3.0
  patch now that it is useless and bumped pynac dependency.

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Correct the dependency on pynac in 9999. See issue #360

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/sage-6.8-noclean.patch, files/sage-6.8-sources-r1.patch,
  sage-9999.ebuild:
  consolidate a couple of patches. Properly install the needed source files.

  13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/ntl-9.3.0.patch, files/sage-6.8-noclean.patch,
  files/sage-6.8-sources-r1.patch, sage-9999.ebuild:
  Bump to 6.8.beta8. It builds, it has to checked over for correctness so there
  may be further tunning.

  03 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Bumping dependency on {lib}gap in 6.8.beta7, not doing ipython before checking
  patches.

  03 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/sage-6.8-singular_extra_arg.patch, files/sage-6.8-blas-r1.patch,