@@ -24,6 +24,7 @@ dev-python/flask-oldsessions
 dev-python/terminado
 dev-python/mistune
 ~dev-python/ipython-3.1.0::sage-on-gentoo
+~dev-python/ipython-3.2.1
 dev-python/mpmath
 dev-python/networkx
 ~dev-python/pexpect-3.3::sage-on-gentoo
@@ -91,7 +92,7 @@ sci-mathematics/polybori
 sci-mathematics/ratpoints
 sci-mathematics/rubiks
 sci-mathematics/rw
-~sci-mathematics/sage-9999 **
+~sci-mathematics/sage-6.8
 ~sci-mathematics/sage-data-conway_polynomials-0.4
 ~sci-mathematics/sage-data-combinatorial_designs-20140630
 ~sci-mathematics/sage-data-elliptic_curves-0.8
