@@ -1,6 +1,3 @@
 ~sci-mathematics/sage-9999
-~sci-mathematics/sage-clib-9999
-~sci-mathematics/sage-baselayout-9999
-~sci-mathematics/sage-doc-9999
 # preparing ecm for removal. I only keep it in case it solves some OS X problems
 sci-mathematics/ecm
