@@ -3,5 +3,7 @@ DIST sage-6.6-r5-neutering.tar.bz2 7366 SHA256 dcbe829f80ce4af68e97d81158b25879c
 DIST sage-6.6.tar.gz 18164362 SHA256 a9468967da3d4f622c6f66adc9c329f5b729a20ff37d45dac366c63e84cf5678 SHA512 a1a2393f5afdff9d638e7c4591e59e2ca9dcdc37906b39efaae72ab470b1890f661de356908ee9692dd85de49832322bae138f1db239b12633da36faeff3ae90
 DIST sage-6.7-r7-neutering.tar.xz 6604 SHA256 a0dddb80394a8ca05484400802cf946c1ff2ab3da0eb5f0f04aabb8864f2ce7c SHA512 20bb74683eae7c8b2c583e7143bd56b079ce38abe4360a81f18f606dea8ba68eb6031bcb60310603d330240d44af17b0b0c83e52a8ba756c38604c5b7d41796c
 DIST sage-6.7.tar.gz 18355111 SHA256 a989dd5bd64ed6138775466be8cd912f4e62dff2530f478a8b7aeb535edb2b88 SHA512 fc8cd78182c91dd3a0ee449c6eccc655f5362b82f1fdc44b6a6d480f45a138589a446ee942039ffb3ca67bed81f642788f5f4f7a8d394f5768f07aceaf2e4544
+DIST sage-6.8-doc-html.tar.xz 50164328 SHA256 78a5588efd0cb65ff0dfdad2c215d4689d870287f823ebe09ef493322c32d357 SHA512 32de361456a37e9f09898ab04a44307462969007d620a4ebcf0c91454bd78e6403e4860dd503b22090428bb6ffee76d466de279ab360facd3ea874d0fb95a39f
 DIST sage-6.8-neutering.patch.xz 8380 SHA256 fa19be06d8ad3885d056fdcc90f0d8cbd26106b2b92b3d1abeeebe76ca8b951d SHA512 a054c44d061c240a2b53a758a976498e536ee30a45b9d37c9f39e16a2ba8cc3af7d9bfbf51b79d58a6f968fcf835157ba7e7fe18ad36e0f667e1d68af6e92535
+DIST sage-6.8.tar.gz 19035329 SHA256 fa3798bd214dd49d2d59e81c698aff5f26a3119910ebddb7cd66dc986744426c SHA512 970c1600362d672aee36db969de8408e8e0c3865e24c4c41bd2866ec3e91e2ab4c8db072769cf3af320d6938eefdc823b54d7cc9dfba26e3ef3e6799fcaee886
 DIST sage-icon.tar.bz2 2699 SHA256 34670405aeeab85e389c423cb0505835b1248a0fbfa360d7dd7b54fa37e6c5d3 SHA512 7d2479dd6de3b743937ae1afa8a4fc02ecd70edf46a776a84145dae55779cc6aefe0ac8fc9064de7795c487fda4063e5cfeadec7aa6506e379c3ee35b216c84b
